refactor: 내가 지원한 글 목록 조회(페이지네이션, 응답값 추가) 로직 수정